--- a/static/login.html
+++ b/static/login.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/styles.css">
-    <script src="/qrcode.min.js"></script>
     <title>Delta Login</title>
   </head>
   <body class='login'>
@@ -61,14 +60,10 @@
             same as before. For equal URLs, browsers apparently don't send a
             cookie they didn't have when requesting the page for the first time.
              */
-            let url = window.location.href;
-            if (url.indexOf("?") > 0) {
-              url += "&";
-            } else {
-              url += "?";
-            }
-            url += "yes=no";
-            window.location.href = url;
+            let path = window.location.pathname;
+            path = path.split("/");
+            path[path.length - 1] = "authorize";
+            window.location.pathname = path.join("/");
           }
         });
       }
